Should hopefully fix the spacing issue..

--- a/templates/default/css/blog.css
+++ b/templates/default/css/blog.css
@@ -37,6 +37,10 @@ body {
 	text-align: center;
 }
 
+.center * {
+	float: none;
+}
+
 a:hover {
 	text-decoration: none;
 	color: #BF3030;
